# retinal-color-transfer

./: .gitignore  README.md  pyproject.toml
configs/: resnet50_imagenet_local.yaml
configs/custom/: custom_lab_a_rgb_g_lab_b.yaml  custom_lab_b_rgb_g_hsv_s.yaml  custom_lab_b_rgb_g_rgb_b.yaml
configs/grayscale/: grayscale.yaml
configs/hsv/: hsv.yaml  hsv_h.yaml  hsv_s.yaml  hsv_v.yaml
configs/lab/: lab.yaml  lab_a.yaml  lab_b.yaml  lab_l.yaml
configs/rgb/: rgb.yaml  rgb_b.yaml  rgb_g.yaml  rgb_r.yaml
configs/ycrcb/: ycrcb.yaml  ycrcb_cb.yaml  ycrcb_cr.yaml  ycrcb_y.yaml
data/manifests/: test.csv  train.csv  validation.csv
data/normalization/custom/: custom_lab_a_rgb_g_lab_b_train_stats.json  custom_lab_b_rgb_g_hsv_s_train_stats.json  custom_lab_b_rgb_g_rgb_b_train_stats.json
data/normalization/fusion/: rgb_lab_hsv_ycrcb_train_stats.json
data/normalization/grayscale/: grayscale_train_stats.json
data/normalization/hsv/: hsv_h_train_stats.json  hsv_s_train_stats.json  hsv_train_stats.json  hsv_v_train_stats.json
data/normalization/lab/: lab_a_train_stats.json  lab_b_train_stats.json  lab_l_train_stats.json  lab_train_stats.json
data/normalization/rgb/: rgb_b_train_stats.json  rgb_g_train_stats.json  rgb_r_train_stats.json  rgb_train_stats.json
notebooks/: train_all_models.ipynb  train_fusion12ch.ipynb
scripts/: 01_prepare_training.py  02_evaluate_and_analyze.py  generate_figure_assets.py  train_fusion12ch.py
src/retinal_color_transfer/: __init__.py  artifacts.py  config.py  data.py  evaluation.py  model.py  reproducibility.py  study.py
(+18 files in other folders)
